fix: shapefileWriter_dbf 测试用 ISO-8859-1 字节透传读 DBF，避免二进制头触发 MalformedInputException 恢复所有测试的 deleteDir 清理调用
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>